fix: сorrect visible

--- a/src/shared/ui/textarea/styles.module.scss
+++ b/src/shared/ui/textarea/styles.module.scss
@@ -1,25 +1,34 @@
 .textareaContainer {
   padding: 2px 10px 2px 10px;
-  min-width: 51.25%;
+  min-width: 49.86%;
+  min-height: 60px;
   background: var(--white-color);
   box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.05) inset;
   border-radius: 8px;
   border: none;
+  position: relative;
   display: flex;
   flex-direction: column;
-}
-
-@media screen and (min-width: 1440px) {
-  .textareaContainer {
-    min-width: 738px;
+  transition: min-width 0.5s ease;
+  &.noValue {
+    justify-content: center;
+    min-width: 28.54%;
   }
 }
 
 .textareaLabel {
+  position: absolute;
+  top: 20px;
+  left: 15px;
   font-size: 12px;
   line-height: 28px;
   font-weight: 400;
   color: var(--grey-dark-color);
+  transition: top 0.5s ease, left 0.5s ease;
+  &.onValue {
+    top: 0;
+    left: 10px;
+  }
 }
 
 .textareaStar {
@@ -27,6 +36,8 @@
 }
 
 .textarea {
+  padding-left: 60px;
+  max-height: 28px;
   border: none;
   outline: none;
   resize: none;
@@ -36,4 +47,10 @@
   font-weight: 400;
   color: var(--black-color);
   background-color: var(--white-color);
+  transition: padding-left 0.5s ease;
+  &.onValue {
+    max-height: none;
+    padding-top: 20px;
+    padding-left: 0;
+  }
 }
